<resources>
    <string name="app_name" translatable="false">PA OVR APP</string>
    <string name="no_intent_handler" translatable="false">
        There are no applications available to handle this action.
    </string>
    <string name="navigation_label_previous">previous</string>
    <string name="navigation_label_next">next</string>
    <string name="nav_title_home" translatable="false">Home</string>
    <string name="nav_title_about" translatable="false">About</string>
    <string name="nav_title_data_usage" translatable="false">Data Usage</string>
    <string name="nav_title_help" translatable="false">Help</string>
    <string name="nav_title_privacy" translatable="false">Privacy Policy</string>
    <string name="clock_in_alert_title" translatable="false">Not Clocked In</string>
    <string name="clock_in_alert_message" translatable="false">You must clock in before registering voters.</string>
    <string name="error_partner_id" translatable="false">Invalid Partner ID</string>
    <string name="clock_in_text" translatable="false">Clock In</string>
    <string name="clock_out_text" translatable="false">Clock Out</string>
    <string name="label_event_total_abandoned" translatable="false">Cancelled</string>
    <string name="label_event_total_dln" translatable="false">DLN</string>
    <string name="label_event_total_ssn" translatable="false">SSN</string>
    <string name="label_event_total_email_opt_in" translatable="false">Email Opt In</string>
    <string name="label_event_total_sms_opt_in" translatable="false">SMS Opt In</string>
    <string name="label_event_clock_in_time" translatable="false">Clock In</string>
    <string name="title_event_details" translatable="false">Shift Location</string>
    <string name="title_event_partner_login" translatable="false">Partner Login</string>
    <string name="title_time_tracking" translatable="false">Time Tracking</string>
    <string name="title_shift_summary" translatable="false">Shift Report</string>
    <string name="label_canvasser" translatable="false">Canvasser</string>
    <string name="label_event" translatable="false">Event</string>
    <string name="label_org" translatable="false">Org</string>
    <string name="label_total_registrations" translatable="false">Total Registrations</string>
    <string name="label_time_tracking" translatable="false">Time Tracking</string>
    <string name="time_tracking_default_value" translatable="false">--:--:--</string>
    <string name="clock_out_dialog_text" translatable="false">Do you want to end your canvassing shift?</string>
    <string name="clock_out_must_upload" translatable="false">There are still pending registrations for upload. All registrations have to be uploaded to clock out.</string>
    <string name="shift_timeout_title" translatable="false">Shift Timed Out</string>
    <string name="shift_timeout_message" translatable="false">Your canvassing shift has timed out. Please start a new shift to continue.</string>
    <string name="validating_partner_id" translatable="false">Validating Partner ID</string>
    <string name="shift_progress" translatable="false">Shift Progress</string>
    <string name="pending_registrations">Applications Pending Upload</string>
    <string name="failed_registration_uploads" translatable="false">Requires Admin For Upload</string>
    <string name="upload">upload</string>
    <string name="check_wifi">Bad Network Connection</string>
    <string name="login_no_wifi_error">Cannot login. Please check network connection</string>
    <string name="no_wifi_upload_message">Cannot upload registrations. Please check network connection</string>
    <string name="cancel_dialog_message">Cancel current registration?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="fragment_title_new_registrant">Name</string>
    <string name="label_us_citizen">I am a U.S. Citizen</string>
    <string name="label_eighteen_or_older">I will be 18 or older by the next election</string>
    <string name="label_name_prefix">Title</string>
    <string name="label_first_name">First Name</string>
    <string name="label_middle_name">Middle Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_name_suffix">Suffix</string>
    <string name="label_birthday">Birthday</string>
    <string name="section_label_eligibility">Eligibility</string>
    <string name="eighteen_or_older_err">You must be 18 or older to vote</string>
    <string name="us_citizen_err">You must be a U.S. citizen</string>
    <string name="email_error">Invalid email</string>
    <string name="birthday_error">Must be 18 by %s</string>
    <string name="fragment_title_personal_info">Address</string>
    <string name="section_label_personal_info">Address Information</string>
    <string name="section_label_name">Name</string>
    <string name="section_label_previous_name">Previous Name</string>
    <string name="section_label_registration_address">Residential Address</string>
    <string name="section_label_mailing_address">Mailing Address</string>
    <string name="section_label_previous_address">Previous Address</string>
    <string name="section_label_phone">Phone</string>
    <string name="label_street">Street Address</string>
    <string name="label_street_2">Street Address 2</string>
    <string name="label_city">City</string>
    <string name="label_zip_code">Zip Code</string>
    <string name="label_state">State</string>
    <string name="label_unit_num">Unit Number</string>
    <string name="unit_type">Unit Type</string>
    <string name="label_county">County</string>
    <string name="checkbox_mailing_address_is_different"> I get my mail from a different address from the one above</string>
    <string name="checkbox_address_changed">I have changed my address</string>
    <string name="checkbox_name_changed">I have changed my name</string>
    <string name="label_receive_text">I agree that %s/Pennsylvania Voice/State Voices may call and text me with important updates and reminders</string>
    <string name="error_no_address">Complete registration using paper form</string>
    <string name="zip_code_error">Invalid zip–code</string>
    <string name="fragment_title_additional_info">Personal</string>
    <string name="fragment_title_assistant_info">Assistance</string>
    <string name="section_label_race">Race</string>
    <string name="section_label_party">Political Party</string>
    <string name="signature_description">sign here</string>
    <string name="label_button_register">Register</string>
    <string name="label_drivers_license_id">PennDOT number</string>
    <string name="label_other_party">Other Political Party</string>
    <string name="label_does_not_have_penn_dot">I do not know my PennDOT number</string>
    <string name="political_party_change">I have changed my political party</string>
    <string name="label_ssn_last_four">Last Four Digitals of social security number</string>
    <string name="label_does_not_have_ssn">I do not know the last four of my social security number</string>
    <string name="preferred_language_label">Preferred Language to Receive Election Materials</string>
    <string name="section_label_election_info">Personal Info</string>
    <string name="penn_dot_enforcer_text">If you have a PA driver\'s license or PennDOT ID card number, you must use it.  Your PennDOT is the 8 digit number found on the top right of a PA driver\'s license OR non-driver\'s state ID card</string>
    <string name="error_penn_dot">Check \"I do not know\" if you don\'t know your PennDOT number</string>
    <string name="error_ssn">Check \"I do not know\" if you don\'t know your SSN last four</string>
    <string name="label_has_assistant">Did someone help you with this form?</string>
    <string name="section_label_assistant_name">Helper Name</string>
    <string name="section_label_assistant_address">Helper Address</string>
    <string name="section_label_assistant_contact_info">Helper Contact Info</string>
    <string name="phone_format_error">Invalid phone number</string>
    <string name="label_email">Email Address</string>
    <string name="label_phone">Phone Number</string>
    <string name="label_phone_type">Type</string>
    <string name="label_receive_email">"I give permission to %s to send me news and updates</string>
    <string name="preferred_language_default">English</string>
    <string name="label_email_confirmation">
    Submit your e-mail address to allow the PA Department of State to send you a message confirming the receipt of your voter registration application:
    \n
    \n
    \u2022 Please note that this email may take up to 24 hours to get to you."
    </string>
    <string name="label_assistant_declaration">
If you helped a voter complete this voter registration application, you must also sign the application.
By checking the box, you are signing the application electronically.
\n
\n
In doing so:
\n
\n
\u2022 You understand that your electronic signature on this application will constitute the legal equivalent of your signature
\n
\n
\u2022 You agree to sign this application by electronic means and that all laws of the Commonwealth of Pennsylvania will apply.
    </string>
    <string name="label_assistant_confirmation">I CONFIRM THAT I HAVE READ AND AGREE TO THE TERMS ABOVE</string>
    <string name="fragment_title_review">Review</string>
    <string name="voter_agreement_text">I have reviewed the above information, and it is true and accurate to the best of my knowledge.</string>
    <string name="section_label_contact_info">Contact Info</string>
    <string name="review_confirm_instructions">Please review the following information and confirm its accuracy.</string>
    <string name="section_label_signature">Signature</string>
    <string name="signature_instructions">Please use stylus for signature capture</string>
    <string name="signature_pad_error">Signature is required</string>
    <string name="action_cancel_reg">Cancel Registration</string>
    <string name="registration_complete">Registration Complete</string>
    <string name="disclosure_agreement_title">Voter Declaration / Penalty</string>
    <string name="registration_complete_dialog_text">
\n
\u2022 Your application has been sent to your county voter registration office.
\n
\n
\u2022 Registration is not complete until processed and accepted.
\n
\n
\u2022 If accepted, you will receive a Voter Registration Card by mail.
\n
\n
\u2022 If you do not receive your Voter Registration Card within 14 days, contact your county voter registration office.
\n
\n
%s
    </string>
    <string name="pref_key_partner_id" translatable="false">partner_id</string>
    <string name="pref_key_canvasser_name" translatable="false">canvasser_name</string>
    <string name="pref_key_event_zip_code" translatable="false">event_zip</string>
    <string name="pref_key_event_name" translatable="false">event_name</string>
    <string name="pref_title_partner_id" translatable="false">Partner ID</string>
    <string name="pref_title_canvaser_name" translatable="false">Canvaser Name</string>
    <string name="pref_title_event_zip_code" translatable="false">Zip Code</string>
    <string name="pref_title_event_name" translatable="false">Location</string>
</resources>