<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:inputType="number"
        android:key="@string/pref_key_partner_id"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_partner_id"/>

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textPersonName"
        android:key="@string/pref_key_canvasser_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_canvaser_name"/>

    <EditTextPreference
        android:inputType="number"
        android:key="@string/pref_key_event_zip_code"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_event_zip_code"/>

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="@string/pref_key_event_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_event_name"/>

</PreferenceScreen>
