<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single"
        android:id="@+id/group_1">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:title="@string/nav_title_home"
            android:icon="@drawable/ic_dashboard_black_24dp"
            />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/nav_title_about"
            />
        <item
            android:id="@+id/nav_data_usage"
            android:icon="@drawable/ic_data_usage_black_24dp"
            android:title="@string/nav_title_data_usage"
            />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/nav_title_help"
            />
    </group>

    <group android:id="@+id/group_2">
        <item
            android:id="@+id/pending_registrations_item"
            android:title="Pending Registration"
            app:actionLayout="@layout/pending_registrations_menu_item"/>
    </group>
</menu>
