<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personal_info_gridlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:columnCount="2"
    android:paddingBottom="@dimen/detail_vertical_padding"
    android:useDefaultMargins="false">

    <com.rockthevote.grommet.ui.views.NameView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="start|bottom"
        app:section_title="@string/section_label_name"/>

    <CheckBox
        android:id="@+id/name_changed"
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:layout_marginStart="@dimen/content_margin"
        android:text="@string/checkbox_name_changed"/>

    <com.rockthevote.grommet.ui.views.NameView
        android:id="@+id/previous_name"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="start|bottom"
        android:visibility="gone"
        app:section_title="@string/section_label_previous_name"/>

    <com.rockthevote.grommet.ui.views.AddressView
        android:id="@+id/home_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="start|bottom"
        app:section_title="@string/section_label_home_address"/>

    <CheckBox
        android:id="@+id/mailing_address_is_different"
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:layout_marginStart="@dimen/content_margin"
        android:text="@string/checkbox_mailing_address_is_different"/>

    <com.rockthevote.grommet.ui.views.AddressView
        android:id="@+id/mailing_address"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="start|bottom"
        android:visibility="gone"
        app:section_title="@string/section_label_mailing_address"
        />

    <CheckBox
        android:id="@+id/address_changed"
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:layout_marginStart="@dimen/content_margin"
        android:text="@string/checkbox_address_changed"/>

    <com.rockthevote.grommet.ui.views.AddressView
        android:id="@+id/previous_address"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="start|bottom"
        android:visibility="gone"
        app:section_title="@string/section_label_previous_address"
        />

    <View
        style="@style/Grommet.Divider"
        android:layout_width="match_parent"
        android:layout_columnSpan="2"/>

    <TextView
        style="@style/Grommet.Content_Area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_columnSpan="2"
        android:text="@string/section_label_phone"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight=".7"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="@dimen/content_margin">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:hint="@string/label_phone"
            android:inputType="phone"/>

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_phone_type"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_item_height"
        android:layout_columnWeight=".3"
        android:layout_gravity="fill_horizontal|bottom"
        android:layout_marginBottom="3dp"
        android:layout_marginEnd="@dimen/content_margin"/>

    <CheckBox
        android:id="@+id/checkbox_can_receive_text"
        style="@style/Grommet.Content_Area"
        android:layout_columnSpan="2"
        android:text="@string/label_receive_text"/>

</GridLayout>
