<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:columnCount="3"
    android:useDefaultMargins="false">

    <View
        style="@style/Grommet.Divider"
        android:layout_width="match_parent"
        android:layout_columnSpan="3"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:id="@+id/address_section_title"
        style="@style/Grommet.Content_Area"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_columnSpan="3"
        tools:text="@string/section_label_mailing_address"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_columnWeight=".7"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="@dimen/content_margin"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_street"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:hint="@string/label_street"
            android:inputType="textPostalAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_columnSpan="2"
        android:layout_columnWeight=".3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginEnd="@dimen/content_margin"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_unit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:hint="@string/label_unit_num"
            android:inputType="number"
            android:maxEms="5"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_columnWeight=".7"
        android:layout_gravity="fill_horizontal"
        android:layout_marginStart="@dimen/content_margin"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_city"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:hint="@string/label_city"
            android:inputType="textPostalAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_columnWeight=".3"
        android:layout_gravity="fill_horizontal"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_state"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:hint="@string/label_state"
            android:inputType="number"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_columnWeight=".3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginEnd="@dimen/content_margin"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edittext_zip_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_height"
            android:hint="@string/label_zip_code"
            android:inputType="number"
            android:maxEms="5"/>

    </android.support.design.widget.TextInputLayout>

</GridLayout>